# AI-Powered-Assistive-Navigation-System

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.py  start.sh
.streamlit/: config.toml
docs/: INSTALLATION.md  PROJECT_README.md  USER_MANUAL.md  architecture.md  dissertation_notes.md  uml.md
docs/diagrams/: system_architecture.mmd  uml_class.mmd
evaluation/: __init__.py  benchmark.py  evaluate_detections.py  ground_truth_template.csv  metrics.py  prediction_template.csv
feedback/: __init__.py  audio.py  haptics.py  logger.py
navigation/: __init__.py  distance.py  engine.py  risk.py  virtual_270.py  zones.py
samples/: sample_ground_truth.csv  sample_predictions.csv  simulation_scenarios.csv
scripts/: generate_sample_videos.py  run_pipeline.py
tests/: test_navigation_feedback_metrics.py
ui/: components.py  streamlit_app.py
vision/: __init__.py  annotator.py  camera.py  config.py  detections.py  detector.py  synthetic.py
